Add projectPath config and excludePaths filtering support
- Add projectPath field to config for specifying project root directory
- Add excludePaths field to sources for filtering out unwanted directories
- Update default config to exclude vendor, node_modules, and .git paths
- Implement path exclusion logic in file collection with glob pattern matching
- Update README and example config with new configuration options

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,3 +1,4 @@
+projectPath: "."
 documents:
   - description: "Project structure overview"
     outputPath: project-structure.md
@@ -8,9 +9,17 @@ documents:
           - migrations
           - templates
         filePattern: "*.php,*.twig"
+        excludePaths:
+          - vendor
+          - node_modules
+          - .git
       - type: file
         sourcePaths:
           - src
           - migrations
           - templates
         filePattern: "*.php,*.twig"
+        excludePaths:
+          - vendor
+          - node_modules
+          - .git
